--- a/P3.html
+++ b/P3.html
@@ -1532,6 +1532,36 @@ div.tocify {
 <p>Por si no tuviéramos cargada la base de datos, la volveremos a cargar</p>
 <pre class="r"><code>ecovid0420 &lt;- read_dta(&quot;./datos/ecovid0420.dta&quot;)</code></pre>
 </div>
+<div id="continuación-subsetting" class="section level1">
+<h1>Continuación “Subsetting”</h1>
+<div id="selección-inversa" class="section level2">
+<h2>Selección “inversa”</h2>
+<p>O sea no “botar algo”, es con el negativo. No funciona con todos los formatos</p>
+<pre class="r"><code>x&lt;-ecovid0420 %&gt;% 
+  select(-pb3)
+x&lt;-ecovid0420[,-10]
+
+rm(x) #rm sólo bota objetos</code></pre>
+<p>Pero con los otros formatos podemos “asignar” valores adentro de un data.frame, y uno de eso valores puede ser “la nada”&quot;</p>
+<pre class="r"><code>ecovid0420$pb3_2&lt;-ecovid0420$pb3
+ecovid0420$pb3_2&lt;-NULL</code></pre>
+<p>De aquí viene esa cuesta en el aprendizaje; tenemos que comprender en qué forma programó el que hizo la librería e incluso a veces cómo aprendió quién te está enseñando o el foro que estás leyendo.</p>
+</div>
+</div>
+<div id="subsetting" class="section level1">
+<h1>Subsetting</h1>
+<p>Rara vez utilizamos una base de datos completa, y rara vez queremos hacer operaciones completas con ellas.</p>
+<p>Vamos a pedir cosas más específicas y podemos seleccionar observaciones o filas. Como nuestra base de datos es muy grande, guardaremos el filtro o selección en un objeto.</p>
+<pre class="r"><code>subset1&lt;-ecovid0420[ecovid0420$pb3&gt;4,]</code></pre>
+<p>También podemos seleccionar columnas</p>
+<pre class="r"><code>subset2&lt;- ecovid0420[, c(&quot;pb1&quot;, &quot;pb2&quot;, &quot;pb3&quot;)]</code></pre>
+<p>podemos combinar los dos tipos de selección</p>
+<pre class="r"><code>subset3&lt;- ecovid0420[(ecovid0420$pb3&gt;4 &amp; ecovid0420$pb1==1 ), c(&quot;pb1&quot;, &quot;pb2&quot;, &quot;pb3&quot;)]</code></pre>
+<p>Con dplyr, podemos usar “filter” y “select”</p>
+<pre class="r"><code>subset4&lt;-ecovid0420 %&gt;% 
+  filter(pb3&gt;4 &amp; pb1==1) %&gt;%
+    select(pb1, pb2, pb3)</code></pre>
+</div>
 <div id="variables-nominales" class="section level1">
 <h1>Variables nominales</h1>
 <p>La variable nominal “pb1”, se captura con “1” para hombres y con un “2” para mujeres en la base de datos. Podemos establecer una operación de igual y además sumar los casos que cumplan con esta condición:</p>
@@ -1715,7 +1745,7 @@ div.tocify {
 ##             Licenciatura o normal  21.3%  16.5%  18.5%
 ##                          Posgrado   3.0%   1.8%   2.3%
 ##                             Total 100.0% 100.0% 100.0%</code></pre>
-<p>Cuando se hagan cuadros de distribuciones (que todas sus partes suman 100), los porcentajes pueden ser una gran ayuda para la interpretación, sobre todos cuando se comparar poblaciones de categorías de diferente tamaño. Por lo general, queremos que los cuadros nos den información de donde están los totales y su 100%, de esta manera el lector se puede guiar de porcentaje con respecto a qué está leyendo. En este caso, vemos que el 100% es común en la última fila. Ello quiere decir que, por ejemplo, el 21.8% del 100% hombres mayores de 5 años tienen un nivel de instrucción de primaria completa.</p>
+<p>Cuando se hagan cuadros de distribuciones (que todas sus partes suman 100), los porcentajes pueden ser una gran ayuda para la interpretación, sobre todos cuando se comparar poblaciones de categorías de diferente tamaño. Por lo general, queremos que los cuadros nos den información de donde están los totales y su 100%, de esta manera el lector se puede guiar de porcentaje con respecto a qué está leyendo. En este caso, vemos que el 100% es común en la última fila.</p>
 <p>Veamos la diferencia de cómo podemos leer la misma celda, pero hoy, hemos calculado los porcentajes a nivel de fila:</p>
 <pre class="r"><code>ecovid0420 %&gt;% 
   mutate(pb3=as_label(pb3)) %&gt;% # para que las lea como factor
